# jianli

./: .env.example  .gitignore  README.md  demo_security.sh  docker-compose.yml  ecosystem.config.js
backend/: .env  .env.example  API_USAGE_GUIDE.md  QUESTION_GENERATOR_SUMMARY.md  REDIS_SETUP_CHECKLIST.md  REDIS_USAGE.md  VOICE_SERVICE_README.md  example_usage.py  pyproject.toml  test_interview_end.py  test_question_generator.py  test_redis.py
backend/app/: config.py  main.py
backend/app/agents/: README.md  __init__.py  controller_agent.py  evaluation_agent.py  evaluator_agent.py  interviewer_agent.py  question_generator.py  unified_interviewer_agent.py
backend/app/models/: chat.py  dialogue.py  dimension.py  interview.py  interview_phase.py  interview_record.py  jd.py  resume.py  ws_messages.py
backend/app/services/: README.md  asr_service.py  background_worker.py  batch_processor.py  chat_engine.py  dimension_analyzer.py  dimension_service.py  encryption_service.py  enhanced_school_verifier.py  es_client.py  file_processor.py  interview_service.py  interview_state.py  interview_state_machine.py  interview_storage.py  jd_analyzer.py  jd_service.py  job_matcher.py  llm_client.py  omni_http_client.py  omni_http_service.py  omni_realtime_service.py  redis_client.py  resume_exporter.py  resume_parser.py  screening_task_manager.py  screening_worker.py  task_manager.py  tts_service.py  university_service.py  voice_service.py
backend/examples/: test_voice_service.py
backend/scripts/: create_mock_interview.py  init_es.py  update_interview_audio.py
frontend/: .env  (+4 more)
(+79 files in other folders)
